--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,5 +6,5 @@ sonar.sources=src/app
 sonar.exclusions=*/node_modules/**,**/*.spec.ts
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=reports/coverage/app-base/lcov.info
-sonar.testExecutionReportPaths=reports/unit/test-sonar.xml
+sonar.javascript.lcov.reportPaths=./reports/coverage/app-base/lcov.info
+
