--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "colombia-holidays": "0.0.1",
     "json-server": "^0.17.0",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.7",
+    "sweetalert2": "^11.1.9",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
